--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/vpn?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mynewpassword
 spring.jpa.hibernate.ddl-auto=update
+
+
+server.port = 10002
